# bazel_demo_client

./: MODULE.bazel  README.md
client/: BUILD.bazel  client.py
